Import of KSCRIPT/Acme-Spinners-0.6 from CPAN.
gitpan-cpan-distribution: Acme-Spinners
gitpan-cpan-version:      0.6
gitpan-cpan-path:         KSCRIPT/Acme-Spinners-0.6.tar.gz
gitpan-cpan-author:       KSCRIPT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,5 @@ Revision history for Perl extension Acme::Spinners.
 	- original version; created by h2xs 1.23 with options
 		-AXn Acme::Spinners
 
+0.6 	Dec 11 2007
+	- fixed some bugs caught when uploaded to CPAN.
